replaced sun base64 encoder with java jdk base 64 encoder